# animal-extinct-species

./: .gitattributes  .gitignore  Dockerfile  README.md  animal_extinct_species.ipynb  app.py  class_names.json  googlenet_animal_classifier.onnx  googlenet_animal_classifier.onnx.data  label_encoder.pkl  main.py  pyproject.toml  score_image.py
.github/workflows/: sync_to_hf.yml
